feat: change group id & disabled signing

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-group=team.unnamed
+group=io.rivrs
 version=1.7.0
 description=A resource-pack library for Minecraft: Java Edition.
 repositoryName=ossrh
